public abstract class ComposantImpl implements Composant{

    private name;

}
